src/test/deca/syntax/invalid/synt/method_decl_inside_method.deca
/*
    Description: Declaration d'une methode au sein d'une methode

    Résultat : erreur syntaxique deca:8:14
*/
class A{
    void x(){
        void y(){
        }
    }
}
// @expected_output deca:8:14: missing ';' at '('
